--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,11 +1,11 @@
 <div class="page-header">
 
-  <%# if @user %>
-    <%# link_to 'Sign Out', logout_path, method: :delete %>
-  <%# else %>
-    <%# link_to 'Sign In', login_path %>
-    <%# link_to 'Sign Up', new_user_path %>
-  <%# end %>
+  <% if @user %>
+    <%= link_to 'Log Out', logout_path, method: :delete %>
+  <% else %>
+    <%= link_to 'Log In', login_path %>
+    <%= link_to 'Register', new_user_path %>
+  <% end %>
 
   <h1>
     <%= link_to "Secrets R Us", root_path %>
