added front_page_list to home#index view

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
-<p>Big set of products</p>
+<h2>For Sale</h2>
 
-<%# link_to 'See all products', products_path %>
+<%= render partial: 'product', collection: @products %>
+
+<%= link_to 'See all products', products_path %>
