--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,7 +25,7 @@
 
 <%= link_to 'See all products', products_path %>
 
-<%# if @user && @user = @product.user %>
+<% if @user && @user == @product.user %>
   <p>Item is currently: <%= active_text(@product) %></p>
   <%= link_to 'Toggle active', toggle_active_path(@product), method: :put %>
   <%# link_to 'Edit Product', edit_user_product_path(@product) %>
@@ -34,4 +34,4 @@
   <!-- or a set of checkboxes with the current category(ies) already checked -->
   <!-- and a button to create a new category, that redirects back to this page -->
   <%# link_to 'Add category', new_product_category_path(@product) %>
-<%# end %>
+<% end %>
