added session[:order_id] to header for debugging purposes

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -14,6 +14,8 @@
 
   <%# link_to cart %>
 
+  <!-- <p>Order_id is: <%# session[:order_id] ? session[:order_id] : "none set" %></p> -->
+
   <% if @user %>
     <%# link_to 'My Account', user_path(user) %>
   <% end %>
