--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,9 +7,18 @@
   <%= csrf_meta_tags %>
 </head>
   <body>
-    <%= render partial: 'shared/header' %>
+    <div class="container-fluid">
 
-    <%= yield %>
+      <%= render partial: 'shared/header' %>
 
+      <div class="row">
+        <div class="col-lg-12">
+
+          <%= yield %>
+
+        </div>
+      </div>
+
+    </div>
   </body>
 </html>
