--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,20 +1,24 @@
-<div class="page-header">
+<div class="row">
+  <div class="col-lg-12">
+    <div class="page-header">
 
-  <% if @user %>
-    <%= link_to 'Log Out', logout_path, method: :delete %>
-  <% else %>
-    <%= link_to 'Log In', login_path %>
-    <%= link_to 'Register', new_user_path %>
-  <% end %>
+      <% if @user %>
+        <%= link_to 'Log Out', logout_path, method: :delete, class: "btn btn-warning" %>
+      <% else %>
+        <%= link_to 'Log In', login_path, class: "btn btn-primary" %>
+        <%= link_to 'Register', new_user_path, class: "btn btn-default" %>
+      <% end %>
 
-  <h1>
-    <%= link_to "Secrets R Us", root_path %>
-    <small>Selling All The Secrets</small>
-  </h1>
+      <h1>
+        <%= link_to "Secrets R Us", root_path %>
+        <small>Selling All The Secrets</small>
+      </h1>
 
-  <%# link_to cart %>
+      <%# link_to cart %>
 
-  <% if @user %>
-    <%# link_to 'My Account', user_path(user) %>
-  <% end %>
+      <% if @user %>
+        <%# link_to 'My Account', user_path(user) %>
+      <% end %>
+    </div>
+  </div>
 </div>
