--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,31 +2,39 @@
 
 <% if flash.now[:errors] %>
   <div>
-    <p class = "alert alert-danger">
+    <p class="alert alert-danger">
     <%= flash.now[:errors] %> </p>
   </div>
 <% end %>
 
-<!-- <% if flash[:success] %>
+<% if flash[:success] %>
   <div>
-    <p class = "alert alert-success">
+    <p class="alert alert-success">
     <%= flash[:success] %> </p>
   </div>
-<% end %> -->
+<% end %>
 
-<%= form_for(:user, url: users_path) do |f| %>
-  <%= f.label :username %>
-  <%= f.text_field :username %>
+<%= form_for @user, html: { class: "form" } do |f| %>
+  <div class="form-group">
+    <%= f.label :username %>
+    <%= f.text_field :username, class: "form-control" %>
+  </div>
 
-  <%= f.label :email%>
-  <%= f.text_field :email %>
+  <div class="form-group">
+    <%= f.label :email %>
+    <%= f.email_field :email, class: "form-control" %>
+  </div>
 
-  <%= f.label :password %>
-  <%= f.password_field :password %>
+  <div class="form-group">
+    <%= f.label :password %>
+    <%= f.password_field :password, class: "form-control" %>
+  </div>
 
-  <%= f.label :password_confirmation %>
-  <%= f.password_field :password_confriamtion %>
+  <div class="form-group">
+    <%= f.label :password_confirmation %>
+    <%= f.password_field :password_confriamtion, class: "form-control" %>
+  </div>
 
-  <%= f.submit "register" %>
+  <%= f.submit "Register", class: "btn btn-primary" %>
 
 <% end %>
