--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,3 +22,15 @@
 .form-control {
   max-width: 250px;
 }
+
+.fit-width {
+  width: auto;
+}
+
+.inline-form {
+  display: inline-block;
+}
+
+.field_with_errors {
+  display: inline-block;
+}
