Cleaned up form fields, layout, and made links into buttons.

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,4 +2,4 @@
 
 <%= render partial: 'product', collection: @products %>
 
-<%= link_to 'See all products', products_path %>
+<%= link_to 'See all products', products_path , class: "btn btn-default" %>
