--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,11 +2,11 @@
 <%= form_for [@product, @review], url: product_reviews_path, html: { class: "form" } do |f| %>
   <div class="form-group">
     <%= f.label :rating %>
-    <%= f.select :rating, options_for_select([ "★☆☆☆☆", "★★☆☆☆", "★★★☆☆", "★★★★☆", "★★★★★"]), include_blank: true, class: "form-control" %>
+    <%= f.select :rating, options_for_select([ "★☆☆☆☆", "★★☆☆☆", "★★★☆☆", "★★★★☆", "★★★★★"]), include_blank: "Please Select", class: "form-control" %>
   </div>
 
   <div class="form-group">
-    <%= f.label :review_text %>
+    <%= f.label :review_text, "Review" %>
     <%= f.text_area :review_text, class: "form-control" %>
   </div>
 
