--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,7 +1,16 @@
 <%= form_tag products_category_path, method: "get" do %>
-  <%= select_tag "category", options_from_collection_for_select(@categories, "id", "name") %>
-  <%= submit_tag %>
-  <% end %>
+  <%= select_tag "category", options_from_collection_for_select(Category.all, "id", "name") %>
+  <%= submit_tag "Sort by Category" %>
+<% end %>
+
+<%= form_tag products_merchant_path, method: "get" do %>
+  <%= select_tag "user", options_from_collection_for_select(User.all, "id", "username") %>
+  <%= submit_tag "Sort by Merchant" %>
+<% end %>
+
+<% if request.path.include?("filter") %>
+  <%= link_to "See all Products", products_path, method: :get, class: "btn" %>
+<% end %>
 
 
 
@@ -18,7 +27,7 @@
       <h1>Price</h1>
     </div>
   </div>
-  <% if @products_array.empty? %>
+  <% if @products_array.empty? && @merchant_products.nil? %>
     <% @products.each do |product| %>
       <% if product.active %>
         <div class="row">
@@ -34,8 +43,24 @@
         </div>
       <% end %>
     <% end %>
-  <% else %>
+  <% elsif @merchant_products.nil? %>
     <% @products_array.each do |product| %>
+      <% if product.active %>
+      <div class="row">
+        <div class = "col-sm-4">
+          <p><%= link_to "#{product.name}", product_path(product.id) %></p>
+        </div>
+        <div class = "col-sm-4">
+          <p><%= image_tag("#{product.photo_url}", class: "photo") %></p>
+        </div>
+        <div class = "col-sm-4">
+          <p><%= product.price %></p>
+        </div>
+      </div>
+      <% end %>
+    <% end %>
+  <% else %>
+    <% @merchant_products.each do |product| %>
       <% if product.active %>
       <div class="row">
         <div class = "col-sm-4">
