--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,5 +1,6 @@
 <h2>For Sale</h2>
 
 <%= render partial: 'product', collection: @products %>
-
-<%= link_to 'See all products', products_path , class: "btn btn-default" %>
+<p>
+  <%= link_to 'See All Products', products_path , class: "btn btn-default btn-lg" %>
+</p>
