--- a/app/views/products/_review.html.erb
+++ b/app/views/products/_review.html.erb
@@ -1,2 +1,4 @@
-<h5><%= review.rating %> out of 5 stars</h5>
-<p>The reviewer said: "<%= review.review_text %>"</p>
+<h5><%= rating_to_stars(review.rating) %></h5>
+<div class="well well-sm">
+  "<%= review.review_text %>"
+</div>
