--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -12,6 +12,6 @@
 
   <%= f.hidden_field :product_id, value: @product.id %>
 
-  <%= f.submit class: "btn btn-default" %>
+  <%= f.submit "Submit Review", class: "btn btn-default" %>
 
 <% end %>
