--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -14,9 +14,9 @@
         <small>Selling All The Secrets</small>
       </h1>
 
-      <%# link_to cart %>
+      <%= link_to 'Cart', cart_path, class: "btn btn-primary"%>
 
-  <!-- <p>Order_id is: <%# session[:order_id] ? session[:order_id] : "none set" %></p> -->
+  <p>Order_id is: <%= session[:order_id] ? session[:order_id] : "none set" %></p>
 
   <% if @user %>
     <%# link_to 'My Account', user_path(user) %>
