--- a/app/views/order_items/cart.html.erb
+++ b/app/views/order_items/cart.html.erb
@@ -1,5 +1,11 @@
 <h1>Shopping cart</h1>
 
+<% if flash[:success] %>
+  <div>
+    <p class="alert alert-success"><%= flash[:success] %></p>
+  </div>
+<% end %>
+
 <table>
   <tr>
     <th>Item</th>
@@ -10,9 +16,9 @@
   <% @order_items.each do |order_item| %>
     <tr>
       <td><%= order_item.product.name %></td>
-      <%= form_for order_item do |f| %>
+      <%= form_for order_item, url: order_item_path(order_item), method: :put do |f| %>
         <td><%= f.number_field :quantity, in: 1..order_item.product.stock, step: 1, value: order_item.quantity %></td>
-        <td><%= f.submit 'Update', method: :put %></td>
+        <td><%= f.submit 'Update' %></td>
       <% end %>
     </tr>
   <% end %>
