--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -54,7 +54,7 @@
     <div class="panel-body">
       <p>Product is currently: <span><%= active_text(@product) %></span></p>
       <p><%= link_to 'Toggle Active', toggle_active_path(@product), method: :put, class: "btn btn-warning" %></p>
-      <%# link_to 'Edit Product', edit_user_product_path(@product) %>
+      <%= link_to 'Edit Product', edit_product_path(@product), class: "btn btn-default" %>
 
       <!-- make below link a form with a dropdown of possible categories -->
       <%= form_for [@product, @product_category], html: { class: "form" } do |f| %>
