--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,37 @@
-<p>
-   you are logged in <big><%= @user.username %></big>!  How neato!
-</p>
+<%= render "nav" %>
+
+<h2>
+  <%= @message + @user.username %>!
+</h2>
+
+<h3>Sales to Date: <%= @total_sales %></h3>
+<h3>Total Items Sold: <%= @quantity_sold %></h3>
+
+<h3>Your top 5 highest selling products:</h3>
+<h3>Recent Sales</h3>
+<table>
+  <thead>
+    <tr>
+      <td>
+        Product
+      </td>
+      <td>
+        Quantity Sold
+      </td>
+      <td>
+        Total Sale
+      </td>
+    </tr>
+  </thead>
+  <tbody>
+    <td>
+
+    </td>
+    <td>
+
+    </td>
+    <td>
+
+    </td>
+  </tbody>
+</table>
