--- a/app/views/products/new.html.erb
+++ b/app/views/products/new.html.erb
@@ -1,2 +1,26 @@
-<h1>Products#new</h1>
-<p>Find me in app/views/products/new.html.erb</p>
+
+<%= form_for @product do |f| %>
+  <%= f.label :name %>
+  <%= f.text_area :name %>
+
+  <%= f.label :price %>
+  <%= f.text_area :price %>
+
+  <%= f.label :description %>
+  <%= f.text_area :description %>
+
+  <%= f.label :photo_url %>
+  <%= f.text_area :photo_url %>
+
+  <%= f.label :stock %>
+  <%= f.text_area :stock %>
+
+  <%= f.hidden_field :active, value: true %>
+  <%= f.hidden_field :user_id, value: params[:user_id] %>
+
+  <%= f.submit %>
+
+<% end %>
+
+
+
