fixed flash[:notice] for deleting an item from a cart

--- a/app/views/order_items/cart.html.erb
+++ b/app/views/order_items/cart.html.erb
@@ -8,8 +8,7 @@
 
 <% if flash[:notice] %>
   <div>
-    <p class="alert alert-danger">
-    <%= flash[:notice] %> </p>
+    <p class="alert alert-danger"><%= flash[:notice] %></p>
   </div>
 <% end %>
 
