--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,3 +8,5 @@
 <p>
    you are logged in <big><%= @user.username %></big>!  How neato!
 </p>
+
+<%= link_to "Create a new Product", new_user_product_path(@user.id), method: :get %>
