--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,10 +17,9 @@
   <%= link_to "See all Products", products_path, method: :get, class: "btn" %>
 <% end %>
 
+<% if @user && @user == @product.user %>
 
-
-
-<h1>All Products</h1>
+<h1>All Products</h1> 
 <div class = "container-fluid">
   <div class ="row">
     <div class = "col-sm-4">
