--- a/app/views/users/_nav.html.erb
+++ b/app/views/users/_nav.html.erb
@@ -6,7 +6,7 @@
         <li><%= link_to("Home", user_path) %></li>
         <li><%= link_to("Products") %></li>
         <li><%= link_to("Orders") %></li>
-        <li><%= link_to("Profile", profile_path) %></li>
+        <li><%= link_to("Go Shopping", products_path) %></li>
       </ul>
   </div>
 </nav>
