--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,3 +1,7 @@
 <%= render "nav" %>
 
-<h1>test</h1>
+<h1>Your Profile</h1>
+<h3><big>Username: </big> <%= @user.username %></h3>
+<h3><big>Email: </big> <%= @user.email %></h3>
+<h3><big>Password: </big> <%= @user.password %></h3>
+<%= link_to("Edit", edit_user_path, class:"btn btn-default") %>
