--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,13 @@
-<%= form_for(:user, url: users_path) do |f| %>
+<%= render "nav" %>
+
+<% if flash.now[:errors] %>
+  <div>
+    <p class = "alert alert-danger">
+    <%= flash.now[:errors] %> </p>
+  </div>
+<% end %>
+
+<%= form_for(:user, url: user_path(@user.id), method: :patch) do |f| %>
   <%= f.label :username %>
   <%= f.text_field :username %>
 
