--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,6 @@
 <%= render "nav" %>
 
-<div class = "col-sm-3">
+<div class = "col-sm-2">
   <p>
     username: <%= @user.username %>
   </p>
@@ -10,8 +10,9 @@
     Email: <%= @user.email %>
   </p>
 </div>
-<div class = "col-sm-3">
+<div class = "col-sm-2">
   <p>
+    <%= link_to("Edit", edit_user_path, class: "") %>
   </p>
 </div>
 <br>
