--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,4 +11,4 @@
 
 <%= link_to "Create a new Product", new_user_product_path(@user.id), method: :get %>
 
-<%= link_to "View Your Products", products_merchant_index(@user.id), method: :get %>
+<%= link_to "View Your Products", products_merchant_index_path(@user.id), method: :get %>
