--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -17,12 +17,12 @@
 <%= form_for @user, html: { class: "form" } do |f| %>
   <div class="form-group">
     <%= f.label :username %>
-    <%= f.text_field :username, class: "form-control" %>
+    <%= f.text_field :username, required: true, autofocus: true, class: "form-control" %>
   </div>
 
   <div class="form-group">
     <%= f.label :email %>
-    <%= f.email_field :email, class: "form-control" %>
+    <%= f.email_field :email, required: true, autofocus: true, class: "form-control" %>
   </div>
 
   <div class="form-group">
