--- a/app/views/orders/confirmation.html.erb
+++ b/app/views/orders/confirmation.html.erb
@@ -1,3 +1,27 @@
-<h1>Well done, you bought some stuff!</h1>
+<h1>Order confirmation</h1>
 
-<p>Your order total was: <%= readable_price(@order.total) %></p>
+<table class="table">
+    <tr>
+      <th>Item</th>
+      <th>Price</th>
+      <th>Quantity</th>
+      <th>Item total</th>
+    </tr>
+    <% @order.order_items.each do |order_item| %>
+      <% item_price = order_item.product.price %>
+      <tr>
+        <td><%= link_to order_item.product.name, product_path(order_item.product) %></td>
+        <td><%= readable_price(item_price) %></td>
+        <td><%= order_item.quantity %></td>
+        <td><%= readable_price(item_price * order_item.quantity) %></td>
+      </tr>
+    <% end %>
+  </table>
+
+<p>Total: <%= readable_price(@order.total) %></p>
+
+<p>Order time: <%= readable_date(@order.updated_at) %></p>
+
+<p>Current status: <%= @order.status %></p>
+
+<%= link_to "Return to shopping", products_path, class: "btn btn-primary" %>
