fixed bug in update method; change @order lookup to use find_by

--- a/app/views/order_items/cart.html.erb
+++ b/app/views/order_items/cart.html.erb
@@ -19,7 +19,6 @@
       <th>Item</th>
       <th>Price</th>
       <th>Quantity</th>
-      <th></th>
       <th>Item total</th>
       <th></th>
     </tr>
@@ -28,10 +27,14 @@
       <tr>
         <td><%= order_item.product.name %></td>
         <td><%= readable_price(item_price) %></td>
+
         <%= form_for order_item, url: order_item_path(order_item), method: :put do |f| %>
-          <td><%= f.number_field :quantity, in: 1..order_item.product.stock, step: 1, value: order_item.quantity %></td>
-          <td><%= f.submit 'Update', class: "btn btn-default" %></td>
+          <td>
+            <%= f.number_field :quantity, in: 1..order_item.product.stock, step: 1, value: order_item.quantity %>
+            <%= f.submit 'Update', class: "btn btn-default" %>
+          </td>
         <% end %>
+
         <td><%= readable_price(item_price * order_item.quantity) %></td>
         <td><%= link_to 'Remove', order_item_path(order_item), method: :delete, data: { confirm: "Remove this item from your cart?" }, class: "btn btn-danger" %></td>        
       </tr>
@@ -48,5 +51,6 @@
 
   <%= link_to 'Check out', checkout_path, class: "btn btn-primary" %>
 <% else %>
-  <p>There are no items in your cart.</p> 
+  <p>There are no items in your cart.</p>
+  <%= link_to 'Return to shopping', products_path, class: "btn btn-primary" %> 
 <% end %>
