--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -45,7 +45,10 @@
     <h3 class="panel-title">Reviews</h3>
   </div>
   <div class="panel-body">
-    <p><%= link_to 'Write a Review', new_product_review_path(@product), class: "btn btn-default" %></p>
+    <!-- refactor this logic '@user && @user == @product.user', make it be elsewhere -->
+    <% unless @user && @user == @product.user %>
+      <p><%= link_to 'Write a Review', new_product_review_path(@product), class: "btn btn-default" %></p>
+    <% end %>
     <%= render partial: 'review', collection: @reviews %>
   </div>
 </div>
